# StoreOrderAdvisorDjango

./: .gitignore  pyproject.toml
OrderPredictor/: db.sqlite3  manage.py
OrderPredictor/OrderPredictor/: asgi.py  settings.py  urls.py  wsgi.py
OrderPredictor/api/: urls.py  views.py
OrderPredictor/frontend/: package-lock.json  package.json
OrderPredictor/frontend/src/: App.js
OrderPredictor/frontend/src/components/: UploadSalesReport.css  UploadSalesReport.jsx
SampleData/: Order.csv
