[tool.poetry]
name = "storeinventory"
version = "0.1.0"
description = "An API to take in a store sales report and generate an order request to restock all food"
authors = ["joeyxsalazar <salazarxjoey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
django-rest-framework = "^0.1.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
